# struct-vs-unstruct

./: .gitignore  config.ini  main.py  pyproject.toml  requirements.txt
.idx/: dev.nix
struct_vs_unstruct/: config.ini  main.py  prompts.py  self_discover.py
struct_vs_unstruct/data/modified/self_synthesis/t4d_eval/: cache-2083dee8fda8a9ab.arrow  cache-35be4ac3441973e8.arrow  cache-5fd664cfb853cc31.arrow  cache-789eb250d3493c78.arrow  cache-c451c47e15babbfe.arrow  cache-cfe0f73cb0de5be3.arrow  cache-f737c544238fb747.arrow  state.json
struct_vs_unstruct/experiments/: MATH experiments.ipynb  cloud_llm_providers.ipynb  datasets.ipynb  modified_self_discover.ipynb  self_discover.py
struct_vs_unstruct/experiments/llama3.1_405B/: charts.ipynb
struct_vs_unstruct/experiments/llama3.1_405B/modified/: datasets.ipynb
struct_vs_unstruct/experiments/llama3.1_405B/modified/non_self_synthesis/: math.ipynb
struct_vs_unstruct/experiments/llama3.1_405B/original/non_self_synthesis/: math.ipynb  project-1-at-2024-10-30-15-35-cd66a721.json
struct_vs_unstruct/experiments/mistral_large_2407/modified/non_self_synthesis/: bbh_word_sorting_blank.csv  dataset_compiler.ipynb  eval.ipynb  t4d.ipynb  (+1 more)
struct_vs_unstruct/experiments/modified/non_self_synthesis/: dataset_compiler.ipynb
struct_vs_unstruct/helpers/: config.py  dataset.py  evals.py  llm.py  log.py  logger.py  paths.py  rate.py
struct_vs_unstruct/logs/: token_usage_log.csv
struct_vs_unstruct/notebooks/: MATH experiments.ipynb  cloud_llm_providers.ipynb  datasets.ipynb  modified_self_discover.ipynb  self_discover.py
(+15753 files in other folders)
